--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -171,43 +171,16 @@
         <ul id="recently-played-list"></ul>
     </div>
 
-<!-- <div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); padding: 12px; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden; display: flex; flex-direction: column; gap: 10px;">
-
-  <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
-
-  <div style="display: flex; align-items: center; z-index: 2;">
-    <img id="now-playing-album-art" alt="" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; animation: spin 20s linear infinite;" />
-    <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden; flex-grow: 1;">
-      <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #1DB954;">Play some music ;</div>
-      <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 2px;"></div>
-      <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px; font-style: italic;"></div>
+    <div id="now-playing" style="margin: 20px auto; background: #282828; padding: 15px; border-radius: 12px; width: 80%; max-width: 600px; color: white;">
+  <h2 style="color: #1DB954;">Now Playing</h2>
+  <div id="now-playing-content" style="display: flex; align-items: center;">
+    <img id="now-playing-album-art" src="" alt="Album Art" style="width: 64px; height: 64px; border-radius: 8px; margin-right: 15px; object-fit: cover;">
+    <div>
+      <div id="now-playing-track" style="font-weight: bold; font-size: 1.2rem;">Loading...</div>
+      <div id="now-playing-artist" style="color: #B3B3B3;"></div>
+      <div id="now-playing-album" style="font-style: italic; color: #888;"></div>
     </div>
   </div>
-
-  <div style="display: flex; justify-content: flex-end; z-index: 2;">
-    <button id="share-now-playing" style="padding: 4px 10px; background-color: #1DB954; border: none; border-radius: 14px; color: white; cursor: pointer; font-weight: 500; font-size: 0.75rem; transition: background 0.3s ease;">Share</button>
-  </div>
-
-</div> -->
-
-
-<div id="now-playing-box" style="position: fixed; bottom: 20px; left: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); padding: 12px; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden; display: flex; flex-direction: column; gap: 10px;">
-
-  <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
-
-  <div style="display: flex; align-items: center; z-index: 2;">
-    <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0;" />
-    <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden; flex-grow: 1;">
-      <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #1DB954;">Play some music ;</div>
-      <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"></div>
-      <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-style: italic;"></div>
-    </div>
-  </div>
-
-  <div style="display: flex; justify-content: flex-end; z-index: 2;">
-    <button id="share-now-playing" style="padding: 4px 10px; background-color: #1DB954; border: none; border-radius: 14px; color: white; cursor: pointer; font-weight: 500; font-size: 0.75rem; transition: background 0.3s ease;">Share</button>
-  </div>
-
 </div>
 
 
@@ -348,48 +321,40 @@
             return `<span class="track-name">${track.track}</span> by <span class="artist-name">${track.artist}</span>`;
         });
 
+async function fetchCurrentTrack() {
+  try {
+    const response = await fetch('/api/now-playing');
+    if (!response.ok) throw new Error('Failed to fetch current track');
+    const track = await response.json();
 
-// Now Playing Bar
-        async function updateNowPlaying() {
-    try {
-        // const response = await fetch('/api/now-playing');
-        const response = await fetch('/api/now-playing', { credentials: 'include' });
+    const trackNameEl = document.getElementById('now-playing-track');
+    const artistNameEl = document.getElementById('now-playing-artist');
+    const albumNameEl = document.getElementById('now-playing-album');
+    const albumArtEl = document.getElementById('now-playing-album-art');
 
-        if (!response.ok) throw new Error('Fetch failed');
-        const data = await response.json();
-        if (!data || !data.item) {
-            displayNoMusic();
-            return;
-        }
-        const track = data.item;
-        const artists = track.artists.map(artist => artist.name).join(', ');
-        const albumName = track.album.name || '';
-        const albumArt = track.album.images[0]?.url || '';
-
-        document.getElementById('now-playing-album-art').style.display = 'block';
-        document.getElementById('now-playing-album-art').src = albumArt;
-        document.getElementById('now-playing-track').textContent = track.name;
-        document.getElementById('now-playing-artist').textContent = artists;
-        document.getElementById('now-playing-album').textContent = albumName;
-        document.getElementById('blurred-bg').style.backgroundImage = `url(${albumArt})`;
-    } catch (error) {
-        displayNoMusic();
+    if (!track.playing) {
+      trackNameEl.textContent = 'No music playing currently';
+      artistNameEl.textContent = '';
+      albumNameEl.textContent = '';
+      albumArtEl.src = '';
+      return;
     }
+
+    trackNameEl.textContent = track.name;
+    artistNameEl.textContent = track.artist;
+    albumNameEl.textContent = track.album;
+    albumArtEl.src = track.albumArt;
+
+  } catch (error) {
+    console.error(error);
+  }
 }
 
-function displayNoMusic() {
-    document.getElementById('now-playing-album-art').style.display = 'none';
-    document.getElementById('now-playing-track').textContent = 'Play some music ;';
-    document.getElementById('now-playing-artist').textContent = '';
-    document.getElementById('now-playing-album').textContent = '';
-}
+// Fetch on page load and update every 15 seconds
+fetchCurrentTrack();
+setInterval(fetchCurrentTrack, 15000);
 
-document.addEventListener('DOMContentLoaded', () => {
-    updateNowPlaying();
-    setInterval(updateNowPlaying, 15000);
-});
-//updateNowPlaying();
-// setInterval(updateNowPlaying, 15000);
+
 
     document.getElementById('share-now-playing').addEventListener('click', async () => {
   const track = document.getElementById('now-playing-track').textContent;
